--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Затваряне подпрозорец</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Защита на поверителността на сайта</string>
+    <string name="privacyProtectionEnabled">ЗАЩИТА НА САЙТА АКТИВИРАНА</string>
+    <string name="privacyProtectionDisabled">ЗАЩИТА НА САЙТА ДЕАКТИВИРАНА</string>
     <string name="privacyDashboardActivityTitle">Табло за управление на поверителността</string>
-    <string name="privacyProtectionEnabled">ЗАЩИТАТА НА ПОВЕРИТЕЛНОСТТА Е АКТИВИРАНА</string>
-    <string name="privacyProtectionDisabled">ЗАЩИТАТА НА ПОВЕРИТЕЛНОСТТА Е ДЕАКТИВИРАНА</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">ПОДОБРЕН ОТ &lt;img src="%d" /&gt; ДО &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Клас на поверителност</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Практиките за защита на поверителността са резултат от <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Иконка за добра практика</string>
     <string name="practicesIconContentBad">Иконка за лоша практика</string>
-    <string name="privacyProtectionToggle">Защита на поверителността</string>
 
     <string name="networkTrackerSummaryHeader">ОСНОВНИ НАРУШИТЕЛИ НА МРЕЖАТА ЗА ПРОСЛЕДЯВАНЕ</string>
     <string name="networkTrackerSummaryNotReady">Все още събираме данни, за да покажем колко проследяващи елемента сме блокирали.</string>
@@ -396,4 +396,54 @@
     <string name="daxNonSerpCtaText">Докато докосвате и скролвате, ще блокирам досадните тракери. &lt;br/&gt;&lt;br/&gt;Продължавайте - не спирайте да сърфирате!</string>
     <string name="daxMainNetworkOwnedCtaText">Внимание! %s е собственост на %s.&lt;br/&gt;&lt;br/&gt; %s тракери дебнат %s в топ уебсайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не могат да виждат вашата активност в тези сайтове.</string>
     <string name="daxMainNetworkCtaText">Внимание! %s е огромна мрежа за проследяване.&lt;br/&gt;&lt;br/&gt; Техните тракери дебнат %s в топ сайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не виждат вашата активност в тези сайтове.</string>
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Продължаване</string>
+    <string name="downloadConfirmationSaveFileTitle">Запазване %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Запазване на двете</string>
+    <string name="downloadConfirmationReplaceOldFileText">Заместване</string>
+    <string name="downloadConfirmationOpenFileText">Отваряне</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Файлът не може да се отвори</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Старият файл не можа да бъде изтрит</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Икона на приложението</string>
+    <string name="changeIconCtaLabel">Промени иконата на приложението</string>
+    <string name="changeIconCtaAccept">Приложи</string>
+    <string name="changeIconCtaCancel">Отказ</string>
+    <string name="changeIconDialogTitle">Прилагане на нова икона?</string>
+    <string name="changeIconDialogMessage">Приложението може да се затвори, за да приложи промените. Върнете се, след като се насладите на красивата си нова икона.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Управление на белия списък</string>
+    <string name="reportBrokenSite">Подаване на сигнал за повреден сайт</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Добавяне</string>
+    <string name="dialogEditTitle">Редактиране</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Бял списък</string>
+    <string name="whitelistAdd">Добавяне към белия списък</string>
+    <string name="whitelistRemove">Премахване от белия списък</string>
+    <string name="whitelistEntryOverflowContentDescription">Още опции за въвеждане в белия списък %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Сигурни ли сте, че искате да изтриете &lt;b&gt;%s&lt;/b&gt; от белия списък?</string>
+    <string name="whitelistExplanation">Тези сайтове в белия списък няма да бъдат надградени от Защитата на поверителността</string>
+    <string name="whitelistNoEntries">Все още няма сайтове в белия списък</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Не можа да се запази, въведете домейн, например <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Бял списък за Защита на поверителността</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Огнеустойчиви уебсайтове</string>
+    <string name="settingsFireproofWebsites">Огнеустойчиви уебсайтове</string>
+    <string name="fireproofWebsiteMenuTitle">Огнеустойчив уебсайт</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; вече е огнеустойчив! Посетете Настройки, за да научите повече.</string>
+    <string name="fireproofWebsiteSnackbarAction">Отмяна</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Сигурни ли сте, че искате да изтриете &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Все още няма огнеустойчиви уебсайтове</string>
+    <string name="fireproofWebsiteFeatureDescription">Уебсайтовете разчитат на бисквитките, за да ви поддържат вписани. Когато направите даден сайт огнеустойчив, бисквитките няма да бъдат изтривани и ще останете вписани в профила си, дори и след като използвате бутона за изгаряне.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Още опции за огнеустойчивост на уебсайт %s</string>
 </resources>
