--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Zavřít karta</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Ochrana osobních údajů na webových stránkách</string>
+    <string name="privacyProtectionEnabled">OCHRANA STRÁNKY ZAPNUTÁ</string>
+    <string name="privacyProtectionDisabled">OCHRANA STRÁNKY VYPNUTA</string>
     <string name="privacyDashboardActivityTitle">Deska ochrany soukromí</string>
-    <string name="privacyProtectionEnabled">OCHRANA SOUKROMÍ POVOLENA</string>
-    <string name="privacyProtectionDisabled">OCHRANA SOUKROMÍ DEAKTIVOVÁNA</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">VYLEPŠENO Z &lt;img src="%d" /&gt; NA &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Hodnocení ochrany soukromí</string>
 
@@ -125,7 +126,6 @@
     <string name="practicesTosdrLink">Postupy ochrany soukromí jsou výsledkem <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikona správného postupu</string>
     <string name="practicesIconContentBad">Ikona nesprávného postupu</string>
-    <string name="privacyProtectionToggle">Ochrana soukromí</string>
 
     <string name="networkTrackerSummaryHeader">NEJČASTĚJŠÍ DELIKVENTI SLEDOVACÍ SÍTĚ</string>
     <string name="networkTrackerSummaryNotReady">Stále shromažďujeme data, abychom zjistili, kolik sledovacích zařízení jsme zablokovali.</string>
@@ -402,4 +402,55 @@
     <string name="daxNonSerpCtaText">Zatímco Vy budete klepat a přejíždět, já budu blokovat zlovolné sledovače. &lt;br/&gt;&lt;br/&gt;Nenechejte se rušit — pokračujte v prohlížení!</string>
     <string name="daxMainNetworkOwnedCtaText">Hlavy vzhůru! %s vlastní společnost %s.&lt;br/&gt;&lt;br/&gt; Sledovatelé %s číhají na přibližně %s významných webů &#128561;, ale netrapte se!&lt;br/&gt;&lt;br/&gt;Já %s zablokuji, aby Vaši aktivitu na těchto webech neviděl.</string>
     <string name="daxMainNetworkCtaText">Hlavy vzhůru! %s je významná sledovací síť.&lt;br/&gt;&lt;br/&gt; Jejich sledovatelé číhají na přibližně %s významných webů &#128561;, ale netrapte se!&lt;br/&gt;&lt;br/&gt;Já %s zablokuji, aby Vaši aktivitu na těchto webech neviděl.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Pokračovat</string>
+    <string name="downloadConfirmationSaveFileTitle">Uložit %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Nechat si oba</string>
+    <string name="downloadConfirmationReplaceOldFileText">Nahradit</string>
+    <string name="downloadConfirmationOpenFileText">Otevřít</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Soubor nelze otevřít</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Starý soubor nelze smazat</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Ikona aplikace</string>
+    <string name="changeIconCtaLabel">Změnit ikonu aplikace</string>
+    <string name="changeIconCtaAccept">Aplikovat</string>
+    <string name="changeIconCtaCancel">Zrušit</string>
+    <string name="changeIconDialogTitle">Použít novou ikonu?</string>
+    <string name="changeIconDialogMessage">Aplikace se může zavřít, aby aplikovala změny. Až se pokocháte svou krásnou novou ikonou, vraťte se zpátky.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Spravovat seznam povolených</string>
+    <string name="reportBrokenSite">Nahlásit nefunkční webové stránky</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Přidat</string>
+    <string name="dialogEditTitle">Upravit</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Seznam povolených</string>
+    <string name="whitelistAdd">Přidat na seznam povolených</string>
+    <string name="whitelistRemove">Odebrat ze seznamu povolených</string>
+    <string name="whitelistEntryOverflowContentDescription">Další možnosti pro zápis na seznam povolených %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Opravdu chcete smazat &lt;b&gt;%s&lt;/b&gt; ze seznamu povolených?</string>
+    <string name="whitelistExplanation">Tyto weby na seznamu povolených nebudou aktualizovány pomocí Ochrany osobních údajů</string>
+    <string name="whitelistNoEntries">Zatím žádné seznamy povolených webových stránek</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Nelze uložit, doménu zadejte jako <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Seznam povolených pro ochranu osobních údajů</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Webové stránky pro ochranu souborů</string>
+    <string name="settingsFireproofWebsites">Webové stránky pro ochranu souborů</string>
+    <string name="fireproofWebsiteMenuTitle">Webová stránka pro ochranu souborů</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; je nyní chráněný! Další informace naleznete v části Nastavení.</string>
+    <string name="fireproofWebsiteSnackbarAction">Vrátit</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Opravdu chcete smazat &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Žádné webové stránky zatím nejsou chráněny</string>
+    <string name="fireproofWebsiteFeatureDescription">Webové stránky při přihlášení spoléhají na soubory cookie. Je-li web chráněný, cookies nebudou smazány a vy zůstanete přihlášeni, i po použití tlačítka Fire.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Další možnosti pro chráněné webové stránky %s</string>
 </resources>
