--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Luk fane</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Webstedets beskyttelse af personlige oplysninger</string>
+    <string name="privacyProtectionEnabled">BESKYTTELSE AF WEBSTEDET ER AKTIVERET</string>
+    <string name="privacyProtectionDisabled">BESKYTTELSE AF WEBSTEDET ER DEAKTIVERET</string>
     <string name="privacyDashboardActivityTitle">Privatlivspanel</string>
-    <string name="privacyProtectionEnabled">BESKYTTELSE AF PRIVATLIVETS FRED AKTIVERET</string>
-    <string name="privacyProtectionDisabled">BESKYTTELSE AF PRIVATLIVETS FRED DEAKTIVERET</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">FORSTÆRKET FRA &lt;img src="%d" /&gt; TIL &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Grad af privatliv</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Praksis for beskyttelse af privatlivets fred fra <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikon for god praksis</string>
     <string name="practicesIconContentBad">Ikon for dårlig praksis</string>
-    <string name="privacyProtectionToggle">Beskyttelse af privatlivets fred</string>
 
     <string name="networkTrackerSummaryHeader">DE STØRSTE LOVOVERTRÆDERE FRA TRACKER-NETVÆRK</string>
     <string name="networkTrackerSummaryNotReady">Vi indsamler stadig data for at vise, hvor mange trackere vi har blokeret.</string>
@@ -396,4 +396,55 @@
     <string name="daxNonSerpCtaText">Når du trykker og ruller, blokerer jeg irriterende trackere. &lt;br/&gt;&lt;br/&gt;Gå videre - fortsæt med at browse!</string>
     <string name="daxMainNetworkOwnedCtaText">Pas på! %s ejes af %s.&lt;br/&gt;&lt;br/&gt; %s s trackere lurer på omkring %s af de mest populære websteder &#128561; men bare rolig! &lt;br/&gt;&lt;br/&gt;Jeg blokerer for %s så de ikke kan se din aktivitet på disse sites.</string>
     <string name="daxMainNetworkCtaText">Pas på! %s er et stort sporingsnetværk.&lt;br/&gt;&lt;br/&gt; Deres trackere lurer på omkring %s af de mest populære websteder &#128561; men bare rolig! &lt;br/&gt;&lt;br/&gt;Jeg blokerer for %s så de ikke kan se din aktivitet på disse websteder.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Forsæt</string>
+    <string name="downloadConfirmationSaveFileTitle">Gem %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Behold begge</string>
+    <string name="downloadConfirmationReplaceOldFileText">Erstat</string>
+    <string name="downloadConfirmationOpenFileText">Åbn</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Filen kunne ikke åbnes</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Det var ikke muligt at  slette den gamle fil</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">App-ikon</string>
+    <string name="changeIconCtaLabel">Ændring af app-ikon</string>
+    <string name="changeIconCtaAccept">Ansøg</string>
+    <string name="changeIconCtaCancel">Afbestil</string>
+    <string name="changeIconDialogTitle">Vil du anvende nyt ikon?</string>
+    <string name="changeIconDialogMessage">Det er muligt at appen lukker for at anvende ændringer. Kom tilbage, når du har beundret dit smukke nye ikon.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Administrer Whitelist</string>
+    <string name="reportBrokenSite">Rapporter ødelagt websted</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Tilføj</string>
+    <string name="dialogEditTitle">Rediger</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Whitelist</string>
+    <string name="whitelistAdd">Føj til Whitelist</string>
+    <string name="whitelistRemove">Fjern fra Whitelist</string>
+    <string name="whitelistEntryOverflowContentDescription">Flere muligheder for tilføjelse af Whitelist %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Er du sikker på, at du vil slette &lt;b&gt;%s&lt;/b&gt; fra Whitelist?</string>
+    <string name="whitelistExplanation">Disse Whitelist sider opgraderes ikke af beskyttelsen af personlige oplysninger</string>
+    <string name="whitelistNoEntries">Der er endnu ingen Whitelist websteder</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Kunne ikke gemme, indtast et domæne som <b>eksempel.dk</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Whitelist til beskyttelsen af personlige oplysninger</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Brandsikre websteder</string>
+    <string name="settingsFireproofWebsites">Brandsikre websteder</string>
+    <string name="fireproofWebsiteMenuTitle">Brandsikkert websted</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; er nu brandsikkert! Besøg Indstillinger for at lære mere.</string>
+    <string name="fireproofWebsiteSnackbarAction">Fortryd</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Er du sikker på, at du vil slette &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Der er endnu ingen brandsikrede websteder</string>
+    <string name="fireproofWebsiteFeatureDescription">Websider er afhængige af cookies for at forblive logget ind. Når du brandsikrer et websted, slettes cookies ikke, og du forbliver logget ind, selv efter at du har brugt Brand knappen.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Flere muligheder for at brandsikre websted %s</string>
 </resources>
