--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Κλείσιμο καρτέλα</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Προστασία της ιδιωτικότητας του ιστότοπου</string>
+    <string name="privacyProtectionEnabled">ΕΝΕΡΓΟΠΟΙΗΣΗ ΤΗΣ ΠΡΟΣΤΑΣΙΑΣ ΤΟΥ ΙΣΤΟΤΟΠΟΥ</string>
+    <string name="privacyProtectionDisabled">ΑΠΕΝΕΡΓΟΠΟΊΗΣΗ ΤΗΣ ΠΡΟΣΤΑΣΙΑΣ ΤΟΥ ΙΣΤΟΤΟΠΟΥ</string>
     <string name="privacyDashboardActivityTitle">Πίνακας εργαλείων ιδιωτικότητας</string>
-    <string name="privacyProtectionEnabled">ΠΡΟΣΤΑΣΙΑ ΙΔΙΩΤΙΚΟΤΗΤΑΣ ΕΝΕΡΓΟΠΟΙΗΜΕΝΗ</string>
-    <string name="privacyProtectionDisabled">ΠΡΟΣΤΑΣΙΑ ΙΔΙΩΤΙΚΟΤΗΤΑΣ ΑΠΕΝΕΡΓΟΠΟΙΗΜΕΝΗ</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">ΒΕΛΤΙΩΘΗΚΕ ΑΠΟ &lt;img src="%d" /&gt; ΣΕ &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Βαθμολογία ιδιωτικότητας</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Αποτελέσματα πρακτικών ιδιωτικότητας από <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Εικονίδιο ορθής πρακτικής</string>
     <string name="practicesIconContentBad">Εικονίδιο ακατάλληλης πρακτικής</string>
-    <string name="privacyProtectionToggle">Προστασία ιδιωτικότητας</string>
 
     <string name="networkTrackerSummaryHeader">ΚΟΡΥΦΑΙΟΙ ΠΑΡΑΒΑΤΕΣ ΤΟΥ ΔΙΚΤΥΟΥ ΠΑΡΑΚΟΛΟΥΘΗΣΗΣ</string>
     <string name="networkTrackerSummaryNotReady">Εξακολουθούμε να συλλέγουμε δεδομένα για να δείξουμε πόσες παρακολουθήσεις έχουμε αποκλείσει.</string>
@@ -396,4 +396,54 @@
     <string name="daxNonSerpCtaText">Καθώς πιέζετε και μετακινείτε τον δρομέα, θα μπλοκάρω ενοχλητικούς ιχνηλάτες. &lt;br/&gt;&lt;br/&gt; Εμπρός - συνεχίστε την περιήγηση!</string>
     <string name="daxMainNetworkOwnedCtaText">Ενημέρωση εκ των προτέρων! %s ανήκει στην %s.&lt;br/&gt;&lt;br/&gt; %s Οι ιχνηλάτες παραμονεύουν περίπου %s των κορυφαίων ιστοτόπων &#128561; αλλά μην ανησυχείτε! &lt;br/&gt;&lt;br/&gt;Θα μπλοκάρω %s σε αυτούς τους ιστότοπους την θέαση της δραστηριότητάς σας</string>
     <string name="daxMainNetworkCtaText">Ενημέρωση εκ των προτέρων! Το %s είναι ένα σημαντικό δίκτυο παρακολούθησης.&lt;br/&gt;&lt;br/&gt; Οι ιχνηλάτες τους παραμονεύουν σε περίπου %s κορυφαίων ιστότοπων &#128561; αλλά μην ανησυχείτε! &lt;br/&gt;&lt;br/&gt;Θα μπλοκάρω %s σε αυτούς τους ιστότοπους την θέαση της δραστηριότητά σας.</string>
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Συνέχεια</string>
+    <string name="downloadConfirmationSaveFileTitle">Αποθήκευση %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Κρατήστε και τα δύο</string>
+    <string name="downloadConfirmationReplaceOldFileText">Αντικατάσταση</string>
+    <string name="downloadConfirmationOpenFileText">΄Άνοιγμα</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Δεν ήταν δυνατό το άνοιγμα του αρχείου</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Δεν ήταν δυνατή η διαγραφή του παλιού αρχείου</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Εικονίδιο Εφαρμογής</string>
+    <string name="changeIconCtaLabel">Αλλαγή εικονιδίου Εφαρμογής</string>
+    <string name="changeIconCtaAccept">Εφαρμογή</string>
+    <string name="changeIconCtaCancel">Ακύρωση</string>
+    <string name="changeIconDialogTitle">Εφαρμογή Νέου Εικονιδίου;</string>
+    <string name="changeIconDialogMessage">Η εφαρμογή μπορεί να κλείσει για να εφαρμοστούν οι αλλαγές. Επιστρέψτε αφού θαυμάσετε το νέο σας όμορφο εικονίδιο.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Διαχείριση Λευκής λίστας</string>
+    <string name="reportBrokenSite">Αναφορά ιστότοπου που δεν λειτουργεί</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Προσθήκη</string>
+    <string name="dialogEditTitle">Επεξεργασία</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Λευκή λίστα</string>
+    <string name="whitelistAdd">Προσθήκη στη λευκή λίστα</string>
+    <string name="whitelistRemove">Αφαίρεση από τη λευκή λίστα</string>
+    <string name="whitelistEntryOverflowContentDescription">Περισσότερες επιλογές για καταχώριση στη λευκή λίστα %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Είστε βέβαιοι ότι θέλετε να διαγράψετε το &lt;b&gt;%s&lt;/b&gt; από τη λευκή λίστα;</string>
+    <string name="whitelistExplanation">Αυτοί οι ιστότοποι στη λευκή λίστα δεν θα αναβαθμιστούν από την Προστασία της Ιδιωτικότητας</string>
+    <string name="whitelistNoEntries">Δεν υπάρχουν ακόμη ιστότοποι στη λευκή λίστα</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Δεν ήταν δυνατή η αποθήκευση, εισαγάγετε ένα πεδίο όπως το <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Λευκή λίστα Προστασία της Ιδιωτικότητας</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Ασφαλείς ιστότοποι</string>
+    <string name="settingsFireproofWebsites">Ασφαλείς ιστότοποι</string>
+    <string name="fireproofWebsiteMenuTitle">Ασφαλής ιστότοπος</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">Το &lt;b&gt;%s&lt;/b&gt; είναι πλέον ασφαλές! Επισκεφτείτε τις Ρυθμίσεις για να μάθετε περισσότερα.</string>
+    <string name="fireproofWebsiteSnackbarAction">Αναίρεση</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Είστε βέβαιοι ότι θέλετε να διαγράψετε το &lt;b&gt;%s&lt;/b&gt;;</string>
+    <string name="fireproofWebsiteEmptyListHint">Δεν υπάρχουν ασφαλείς ιστιότοποι ακόμα</string>
+    <string name="fireproofWebsiteFeatureDescription">Οι ιστότοποι βασίζονται σε cookies για να παραμείνετε συνδεδεμένοι. Όταν κάνετε ασφαλή έναν ιστότοπο, τα cookies δεν θα διαγραφούν και θα παραμείνετε συνδεδεμένοι, ακόμη και μετά τη χρήση του κουμπιού Fire.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Περισσότερες επιλογές για ασφαλή ιστότοπο %s</string>
 </resources>
