--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -91,9 +91,10 @@
     <string name="closeTab">Sulge vaheleht</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Saidi privaatsuse kaitse</string>
+    <string name="privacyProtectionEnabled">Saidi kaitse on lubatud</string>
+    <string name="privacyProtectionDisabled">Saidi kaitse on keelatud</string>
     <string name="privacyDashboardActivityTitle">Privaatsuse juhtpaneel</string>
-    <string name="privacyProtectionEnabled">PRIVAATSUSKAITSE SEES</string>
-    <string name="privacyProtectionDisabled">PRIVAATSUSKAITSE VÄLJAS</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">TÄIUSTATUD &lt;img src="%d" /&gt; - &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Privaatsusaste</string>
 
@@ -139,7 +140,6 @@
     <string name="practicesTosdrLink">Privaatsustava tuleneb <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Hea tava ikoon</string>
     <string name="practicesIconContentBad">Halva tava ikoon</string>
-    <string name="privacyProtectionToggle">Privaatsuse kaitse</string>
 
     <string name="networkTrackerSummaryHeader">JÄLGIMISVÕRGU SUURIMAD RIKKUJAD</string>
     <string name="networkTrackerSummaryNotReady">Kogume endiselt andmeid, et näidata, kui palju jälgijaid oleme blokeerinud.</string>
@@ -417,4 +417,55 @@
     <string name="daxNonSerpCtaText">Kui puudutate ja kerite, siis mina blokeerin tüütud jälgijad. &lt;br/&gt;&lt;br/&gt;Edasi — jätkake sirvimist!</string>
     <string name="daxMainNetworkOwnedCtaText">Ettevaatust! Ettevõtte %s omanik on %s.&lt;br/&gt;&lt;br/&gt; %s jälitajad varitsevad %s populaarseimatest veebisaitidest, &#128561; aga ärge muretsege!&lt;br/&gt;&lt;br/&gt;Hoolitsen selle eest, et %s teid nendel saitidel ei jälgiks.</string>
     <string name="daxMainNetworkCtaText">Ettevaatust! %s on suur jälgimisvõrgustik.&lt;br/&gt;&lt;br/&gt; Nend jälitajad jälgivad teid %s populaarseimatest saitidest, &#128561; aga ärge muretsege!&lt;br/&gt;&lt;br/&gt;Hoolitsen selle eest, et %s teid nendel saitidel ei jälgiks.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Jätka</string>
+    <string name="downloadConfirmationSaveFileTitle">Salvesta %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Jäta mõlemad alles</string>
+    <string name="downloadConfirmationReplaceOldFileText">Asenda</string>
+    <string name="downloadConfirmationOpenFileText">Ava</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Faili ei saa avada</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Vana faili ei saa kustutada</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Rakenduse ikoon</string>
+    <string name="changeIconCtaLabel">Rakenduse ikooni muutmine</string>
+    <string name="changeIconCtaAccept">Rakenda</string>
+    <string name="changeIconCtaCancel">Tühista</string>
+    <string name="changeIconDialogTitle">Kas rakendada uus ikoon?</string>
+    <string name="changeIconDialogMessage">Rakendus võib muudatuste salvestamiseks sulguda. Tule pärast oma kena uue ikooni imetlemist tagasi.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Halda valgeloendit</string>
+    <string name="reportBrokenSite">Teata mittetoimivast saidist</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Lisa</string>
+    <string name="dialogEditTitle">Redigeeri</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Valges nimekirjas</string>
+    <string name="whitelistAdd">Lisa valgesse nimekirja</string>
+    <string name="whitelistRemove">Eemalda lubatud loendist</string>
+    <string name="whitelistEntryOverflowContentDescription">Rohkem valikuid valgesse nimekirja lisamiseks %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Kas soovid kindlasti kustutada &lt;b&gt;%s&lt;/b&gt; lubatud loendist?</string>
+    <string name="whitelistExplanation">Neid valgesse nimekirja lisatud saite privaatsuskaitse ei uuenda</string>
+    <string name="whitelistNoEntries">Veel pole valgesse nimekirja lisatud saite</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Salvestamine ebaõnnestus, sisestage domeen kujul <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Privaatsuse kaitse valge nimekiri</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Tulekindlad veebisaidid</string>
+    <string name="settingsFireproofWebsites">Tulekindlad veebisaidid</string>
+    <string name="fireproofWebsiteMenuTitle">Tulekindel veebisait</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; on nüüd tulekindel! Lisateabe saamiseks vaata üle seaded.</string>
+    <string name="fireproofWebsiteSnackbarAction">Võta tagasi</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Kas soovite kindlasti kustutada saidi &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Ükski veebisait pole veel tulekindel</string>
+    <string name="fireproofWebsiteFeatureDescription">Veebisaidid sõltuvad küpsistest, et hoida teid sisselogituna. Kui sait on tulekindel, ei kustutata küpsiseid, ja te jääte sisselogituks ka pärast Tule nupu kasutamist.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Veel tulekindla veebisaidi võimalusi %s</string>
 </resources>
