--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Sulje välilehti</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Sivuston yksityisyydensuoja</string>
+    <string name="privacyProtectionEnabled">SIVUSTOSUOJAUS KÄYTÖSSÄ</string>
+    <string name="privacyProtectionDisabled">SIVUSTOSUOJAUS EI KÄYTÖSSÄ</string>
     <string name="privacyDashboardActivityTitle">Tietosuojan ohjauspaneeli</string>
-    <string name="privacyProtectionEnabled">TIETOSUOJA KÄYTÖSSÄ</string>
-    <string name="privacyProtectionDisabled">TIETOSUOJA ON POISTETTU KÄYTÖSTÄ</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">PARANNETTU &lt;img src="%d" /&gt;–&lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Tietosuoja-arvosana</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Tietosuojakäytäntöjen tulokset kohteesta <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Hyvä käytäntö -kuvake</string>
     <string name="practicesIconContentBad">Huono käytäntö -kuvake</string>
-    <string name="privacyProtectionToggle">Tietosuoja</string>
 
     <string name="networkTrackerSummaryHeader">PAHIMMAT SEURANTAVERKOSTOT</string>
     <string name="networkTrackerSummaryNotReady">Keräämme edelleen tietoja näyttääksemme, kuinka monta seurantapalvelinta olemme estäneet.</string>
@@ -396,4 +396,55 @@
     <string name="daxNonSerpCtaText">Kun napautat ja selaat, estän ikävät seurantaohjelmat. &lt;br/&gt;&lt;br/&gt;Siirry eteenpäin - jatka selaamista!</string>
     <string name="daxMainNetworkOwnedCtaText">Pysy valppaana! %s:n omistaa %s.&lt;br/&gt;&lt;br/&gt; %s:n seurantaohjelmat väijyvät noin %s:lla suosituimmista verkkosivustoista &#128561;, mutta älä huoli! &lt;br/&gt;&lt;br/&gt;Estän %s-väijyjää näkemästä toimintaasi näillä sivustoilla.</string>
     <string name="daxMainNetworkCtaText">Pysy valppaana! %s on merkittävä seurantaverkko.&lt;br/&gt;&lt;br/&gt; Heidän seurantaohjelmansa väijyvät noin %s:lla suosituimmista sivustoista &#128561;, mutta älä huoli! &lt;br/&gt;&lt;br/&gt;Estän %s-väijyjää näkemästä toimintaasi näillä sivustoilla.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Jatka</string>
+    <string name="downloadConfirmationSaveFileTitle">Tallenna %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Pidä molemmat</string>
+    <string name="downloadConfirmationReplaceOldFileText">Korvaa</string>
+    <string name="downloadConfirmationOpenFileText">Avaa</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Tiedostoa ei voitu avata</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Vanhaa tiedostoa ei voitu poistaa</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Sovelluskuvake</string>
+    <string name="changeIconCtaLabel">Vaihda sovelluskuvake</string>
+    <string name="changeIconCtaAccept">Käytä</string>
+    <string name="changeIconCtaCancel">Peruuta</string>
+    <string name="changeIconDialogTitle">Käytetäänkö uutta kuvaketta?</string>
+    <string name="changeIconDialogMessage">Sovellus voi sulkeutua muutosten tekemiseksi. Tule takaisin, kun olet ihaillut komeaa uutta kuvakettasi.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Hallitse sallittujen listaa</string>
+    <string name="reportBrokenSite">Ilmoita viallisesta sivustosta</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Lisää</string>
+    <string name="dialogEditTitle">Muokkaa</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Sallittujen lista</string>
+    <string name="whitelistAdd">Lisää sallittujen listaan</string>
+    <string name="whitelistRemove">Poista sallittujen listasta</string>
+    <string name="whitelistEntryOverflowContentDescription">Lisää sallittujen listaan merkitsemisen vaihtoehtoja %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Haluatko varmasti poistaa &lt;b&gt;%s&lt;/b&gt; sallittujen listoista?</string>
+    <string name="whitelistExplanation">Tietosuoja ei päivitä näitä sallittujen listojen sivustoja</string>
+    <string name="whitelistNoEntries">Ei sallittujen listojen sivustoja vielä</string>
+    <string name="whitelistDomainHint">www.esimerkki.com</string>
+    <string name="whitelistFormatError">Tallennus epäonnistui, kirjoita verkkotunnus kuten <b>esimerkki.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Yksityisyyden suojan sallittu lista</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Palonkestävät verkkosivustot</string>
+    <string name="settingsFireproofWebsites">Palonkestävät verkkosivustot</string>
+    <string name="fireproofWebsiteMenuTitle">Palonkestävä verkkosivusto</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; on nyt palonkestävä! Siirry asetuksiin oppiaksesi lisää.</string>
+    <string name="fireproofWebsiteSnackbarAction">Kumoa</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Haluatko varmasti poistaa &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Yhtään verkkosivustoa ei ole vielä merkitty palokestäväksi</string>
+    <string name="fireproofWebsiteFeatureDescription">Verkkosivustot luottavat evästeisiin pitääksesi sinut kirjautuneena sisään. Kun palosuojaat sivuston, evästeet eivät poistu, ja pysyt kirjautuneena sisään myös Palo-painikkeen käyttämisen jälkeen.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Lisää vaihtoehtoja palonkestävälle verkkosivustolle %s</string>
 </resources>
