--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Fermer onglet</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Protection de la confidentialité du site</string>
+    <string name="privacyProtectionEnabled">PROTECTION DU SITE ACTIVÉE</string>
+    <string name="privacyProtectionDisabled">PROTECTION DU SITE DÉSACTIVÉE</string>
     <string name="privacyDashboardActivityTitle">Tableau de bord de confidentialité</string>
-    <string name="privacyProtectionEnabled">PROTECTION DE LA VIE PRIVÉE ACTIVÉE</string>
-    <string name="privacyProtectionDisabled">PROTECTION DE LA VIE PRIVÉE DÉSACTIVÉE</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">AMÉLIORÉ DE &lt;img src="%d" /&gt; À &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Degré de confidentialité</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Les pratiques de confidentialité résultent de <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Icône de bonne pratique</string>
     <string name="practicesIconContentBad">Icône de mauvaise pratique</string>
-    <string name="privacyProtectionToggle">Protection de la vie privée</string>
 
     <string name="networkTrackerSummaryHeader">PRINCIPAUX COUPABLES DES RÉSEAUX DE TRACKER</string>
     <string name="networkTrackerSummaryNotReady">Nous recueillons toujours des données pour indiquer le nombre de trackers que nous avons bloqués.</string>
@@ -396,4 +396,55 @@
     <string name="daxNonSerpCtaText">Lors de votre navigation, je bloque les traqueurs indésirables. &lt;br/&gt;&lt;br/&gt;Continuez à naviguer librement en toute tranquillité !</string>
     <string name="daxMainNetworkOwnedCtaText">Attention ! %s appartient à %s. &lt;br/&gt;&lt;br/&gt;Les traqueurs de %s se cachent sur environ %s des sites Web les plus visités &#128561;, mais ne vous inquiétez pas ! &lt;br/&gt;&lt;br/&gt;J’empêche %s de voir votre activité sur ces sites.</string>
     <string name="daxMainNetworkCtaText">Attention ! %s est un important réseau de traqueurs.&lt;br/&gt;&lt;br/&gt;Leurs traqueurs se cachent sur environ %s des sites les plus visités &#128561;, mais ne vous inquiétez pas ! &lt;br/&gt;&lt;br/&gt;J’empêche %s de voir votre activité sur ces sites.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Continuer</string>
+    <string name="downloadConfirmationSaveFileTitle">Sauvegarder %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Garder les deux</string>
+    <string name="downloadConfirmationReplaceOldFileText">Remplacer</string>
+    <string name="downloadConfirmationOpenFileText">Ouvert</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Impossible d\'ouvrir le fichier</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Impossible de supprimer l\'ancien fichier</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Icône de l\'appli</string>
+    <string name="changeIconCtaLabel">Changer l\'icône de l\'appli</string>
+    <string name="changeIconCtaAccept">Appliquer</string>
+    <string name="changeIconCtaCancel">Annuler</string>
+    <string name="changeIconDialogTitle">Appliquer une nouvelle icône ?</string>
+    <string name="changeIconDialogMessage">L\'appli peut se fermer pour appliquer les modifications. Revenez après avoir admiré votre magnifique nouvelle icône.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Gérer la liste blanche</string>
+    <string name="reportBrokenSite">Signaler un site cassé</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Ajouter</string>
+    <string name="dialogEditTitle">Modifier</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Liste blanche</string>
+    <string name="whitelistAdd">Ajouter à la liste blanche</string>
+    <string name="whitelistRemove">Supprimer de la liste blanche</string>
+    <string name="whitelistEntryOverflowContentDescription">Plus d\'options pour l\'entrée dans la liste blanche %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Voulez-vous vraiment supprimer &lt;b&gt;%s&lt;/b&gt; de la liste blanche ?</string>
+    <string name="whitelistExplanation">Ces sites en liste blanche ne seront pas mis à niveau par la protection de la vie privée</string>
+    <string name="whitelistNoEntries">Pas encore de sites en liste blanche</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Impossible d\'enregistrer, saisissez un domaine comme <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Liste blanche de protection de la vie privée</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Sites Web coupe-feu</string>
+    <string name="settingsFireproofWebsites">Sites Web coupe-feu</string>
+    <string name="fireproofWebsiteMenuTitle">Site Web coupe-feu</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; est maintenant coupe-feu ! Visitez Paramètres pour en savoir plus.</string>
+    <string name="fireproofWebsiteSnackbarAction">Annuler</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Voulez-vous vraiment supprimer &lt;b&gt;%s&lt;/b&gt; ?</string>
+    <string name="fireproofWebsiteEmptyListHint">Aucun site Web coupe-feu pour le moment</string>
+    <string name="fireproofWebsiteFeatureDescription">Les sites Web utilisent des cookies pour vous garder connecté. Lorsque vous mettez un site en coupe-feu, les cookies ne sont pas effacés et vous restez connecté, même après avoir utilisé le bouton Fire.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Plus d\'options pour le site Web coupe-feu %s</string>
 </resources>
