--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Uždaryti kortelė</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Svetainės privatumo apsauga</string>
+    <string name="privacyProtectionEnabled">SVETAINĖS APSAUGA ĮJUNGTA</string>
+    <string name="privacyProtectionDisabled">SVETAINĖS APSAUGA IŠJUNGTA</string>
     <string name="privacyDashboardActivityTitle">Privatumo valdymo skydelis</string>
-    <string name="privacyProtectionEnabled">PRIVATUMO APSAUGA ĮJUNGTA</string>
-    <string name="privacyProtectionDisabled">PRIVATUMO APSAUGA IŠJUNGTA</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">PATOBULINTA NUO &lt;img src="%d" /&gt; IKI &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Privatumo laipsnis</string>
 
@@ -125,7 +126,6 @@
     <string name="practicesTosdrLink">Privatumo praktikos rezultatai <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Geros praktikos piktograma</string>
     <string name="practicesIconContentBad">Prastos praktikos piktograma</string>
-    <string name="privacyProtectionToggle">Privatumo apsauga</string>
 
     <string name="networkTrackerSummaryHeader">DAŽNIAUSI PAŽEIDĖJAI SEKIKLIŲ TINKLE</string>
     <string name="networkTrackerSummaryNotReady">Renkame duomenis, kad galėtumėme pranešti apie tai, kiek sekiklių užblokavome.</string>
@@ -402,4 +402,55 @@
     <string name="daxNonSerpCtaText">Bakstelėjus ir slenkant, bus blokuojami įkyrūs sekimo įrenginiai. &lt;br/&gt;&lt;br/&gt;Pirmyn - naršykite toliau!</string>
     <string name="daxMainNetworkOwnedCtaText">Būkite atidus! %s priklauso %s.&lt;br/&gt;&lt;br/&gt; %s stebėtojai tyko %s populiariausiuose tinklapiuose &#128561;, bet nesijaudinkite! &lt;br/&gt;&lt;br/&gt;Blokuosiu %s sekimą tuose tinklapiuose.</string>
     <string name="daxMainNetworkCtaText">Būkite atidus! %s yra pagrindinis sekimo tinklas.&lt;br/&gt;&lt;br/&gt; stebėtojai tyko %s populiariausiuose tinklapiuose &#128561;, bet nesijaudinkite! &lt;br/&gt;&lt;br/&gt;Blokuosiu %s sekimą tuose tinklapiuose.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Tęsti</string>
+    <string name="downloadConfirmationSaveFileTitle">Išsaugoti %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Palikti abu</string>
+    <string name="downloadConfirmationReplaceOldFileText">Pakeisti</string>
+    <string name="downloadConfirmationOpenFileText">Atviras</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Nepavyko atidaryti failo</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Nepavyko ištrinti seno failo</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Programėlės piktograma</string>
+    <string name="changeIconCtaLabel">Pakeisti programėlės piktogramą</string>
+    <string name="changeIconCtaAccept">Taikyti</string>
+    <string name="changeIconCtaCancel">Atšaukti</string>
+    <string name="changeIconDialogTitle">Taikyti naują piktogramą?</string>
+    <string name="changeIconDialogMessage">Programėlė gali būti uždaryta, kad būtų pritaikyti pakeitimai. Grįžkite pasigrožėję savo gražia nauja piktograma.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Tvarkyti baltąjį sąrašą</string>
+    <string name="reportBrokenSite">Pranešti apie sugadintą svetainę</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Papildyti</string>
+    <string name="dialogEditTitle">Redaguoti</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Baltasis sąrašas</string>
+    <string name="whitelistAdd">Įtraukti į baltąjį sąrašą</string>
+    <string name="whitelistRemove">Pašalinti iš baltojo sąrašo</string>
+    <string name="whitelistEntryOverflowContentDescription">Daugiau baltojo sąrašo įrašo parinkčių %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Ar tikrai norite ištrinti &lt;b&gt;%s&lt;/b&gt; iš baltojo sąrašo?</string>
+    <string name="whitelistExplanation">Šios į baltąjį sąrašą įtrauktos svetainės nebus atnaujintos privatumo apsauga</string>
+    <string name="whitelistNoEntries">Kol kas nėra baltojo sąrašo svetainių</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Nepavyko išsaugoti, įveskite domeną, pvz., <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Privatumo apsaugos baltasis sąrašas</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Patikrinti svetaines</string>
+    <string name="settingsFireproofWebsites">Patikrinti svetaines</string>
+    <string name="fireproofWebsiteMenuTitle">Patikrinti svetainę</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; dabar yra patikrinta! Apsilankykite „Nustatymuose“ ir sužinokite daugiau.</string>
+    <string name="fireproofWebsiteSnackbarAction">Anuliuoti</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Ar tikrai norite ištrinti &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Dar nėra patikrintų svetainių</string>
+    <string name="fireproofWebsiteFeatureDescription">Svetainėse naudojami slapukai, kurie leidžia likti jums prisijungusiems. Kai patikrinate svetainę, slapukai neištrinami, o jūs liksite prisijungę, net jei paspausite „Deginti“ („Fire“) mygtuką.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Daugiau svetainės patikrinimo parinkčių %s</string>
 </resources>
