--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Lukk fane</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Personvern for side</string>
+    <string name="privacyProtectionEnabled">BESKYTTELSE AV STEDET ER AKTIVERT</string>
+    <string name="privacyProtectionDisabled">BESKYTTELSE AV NETTSIDEN DEAKTIVERT</string>
     <string name="privacyDashboardActivityTitle">Dashbord for personvern</string>
-    <string name="privacyProtectionEnabled">PERSONVERNBESKYTTELSE AKTIVERT</string>
-    <string name="privacyProtectionDisabled">PERSONVERNBESKYTTELSE DEAKTIVERT</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">FORBEDRET FRA &lt;img src="%d" /&gt; TIL &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Grad av personvern</string>
 
@@ -121,7 +122,6 @@
     <string name="practicesTosdrLink">Resultater for personvernpraksis fra <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikon for god praksis</string>
     <string name="practicesIconContentBad">Ikon for dårlig praksis</string>
-    <string name="privacyProtectionToggle">Personvernbeskyttelse</string>
 
     <string name="networkTrackerSummaryHeader">DE VERSTE SPORINGSNETTVERKENE</string>
     <string name="networkTrackerSummaryNotReady">Vi samler fortsatt data for å vise deg hvor mange sporinger vi har blokkert.</string>
@@ -396,4 +396,55 @@
     <string name="daxNonSerpCtaText">Når du trykker og blar, blokkerer jeg irriterende trackere. &lt;br/&gt;&lt;br/&gt;Gå videre – fortsett å bla!</string>
     <string name="daxMainNetworkOwnedCtaText">Følg med! %s eies av %s.&lt;br/&gt;&lt;br/&gt; %ss trackere lurer på omtrent %s av ledende nettsteder &#128561; men ikke bekymre deg! &lt;br/&gt;&lt;br/&gt;Jeg blokkerer %s fra å se aktiviteten din på disse nettstedene.</string>
     <string name="daxMainNetworkCtaText">Følg med! %s er et stort sporingsnettverk.&lt;br/&gt;&lt;br/&gt; Trackerne deres lurer på omtrent %s av ledende nettsteder &#128561; men ikke bekymre deg! &lt;br/&gt;&lt;br/&gt;Jeg hindrer %s fra å se aktiviteten din på disse nettstedene.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Fortsett</string>
+    <string name="downloadConfirmationSaveFileTitle">Lagre %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Behold begge</string>
+    <string name="downloadConfirmationReplaceOldFileText">Erstatt</string>
+    <string name="downloadConfirmationOpenFileText">Åpne</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Kunne ikke åpne filen</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Kunne ikke slette gammel fil</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Appikon</string>
+    <string name="changeIconCtaLabel">Endre appikon</string>
+    <string name="changeIconCtaAccept">Bruk</string>
+    <string name="changeIconCtaCancel">Avbryt</string>
+    <string name="changeIconDialogTitle">Bruke nytt ikon?</string>
+    <string name="changeIconDialogMessage">Det kan hende at appen lukkes for å bruke endringene. Kom tilbake etter at du har beundret det kjekke, nye ikonet ditt.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Administrer hviteliste</string>
+    <string name="reportBrokenSite">Rapporter ødelagt nettsted</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Legg til</string>
+    <string name="dialogEditTitle">Rediger</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Hviteliste</string>
+    <string name="whitelistAdd">Legg til hviteliste</string>
+    <string name="whitelistRemove">Fjern fra hvitelisten</string>
+    <string name="whitelistEntryOverflowContentDescription">Flere alternativer for hvitelisteoppføring %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Er du sikker på at du vil slette &lt;b&gt;%s&lt;/b&gt; fra hvitelisten?</string>
+    <string name="whitelistExplanation">Disse hvitelistenettstedene vil ikke bli oppgradert av Personvern</string>
+    <string name="whitelistNoEntries">Ingen hvitlistede nettsteder ennå</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Kunne ikke lagre, skriv inn et domene som <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Hviteliste for personvern</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Brannsikre nettsteder</string>
+    <string name="settingsFireproofWebsites">Brannsikre nettsteder</string>
+    <string name="fireproofWebsiteMenuTitle">Brannsikkert nettsted</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; er nå brannsikkert! Besøk Innstillinger for å lære mer.</string>
+    <string name="fireproofWebsiteSnackbarAction">Angre</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Er du sikker på at du vil slette &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Ingen nettsteder brannsikre ennå</string>
+    <string name="fireproofWebsiteFeatureDescription">Nettsteder er avhengige av informasjonskapsler for å holde deg pålogget. Når du brannsikrer et nettsted, slettes ikke informasjonskapsler, og du vil forbli pålogget, selv etter at du har brukt brannknappen.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Flere alternativer for brannsikkert nettsted %s</string>
 </resources>
