--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Închidere nouă</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Protecția confidențialității site-ului</string>
+    <string name="privacyProtectionEnabled">PROTECȚIE SITE ACTIVATĂ</string>
+    <string name="privacyProtectionDisabled">PROTECȚIE SITE DEZACTIVATĂ</string>
     <string name="privacyDashboardActivityTitle">Tabloul de bord privind confidențialitatea</string>
-    <string name="privacyProtectionEnabled">PROTECȚIA CONFIDENȚIALITĂȚII A FOST ACTIVATĂ</string>
-    <string name="privacyProtectionDisabled">PROTECȚIA CONFIDENȚIALITĂȚII A FOST DEZACTIVATĂ</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">MĂRIT DE LA &lt;img src="%d" /&gt; LA &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Grad de confidențialitate</string>
 
@@ -125,7 +126,6 @@
     <string name="practicesTosdrLink">Practicile privind confidențialitatea rezultă din <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Pictogramă „Bune practici”</string>
     <string name="practicesIconContentBad">Pictogramă „Practici inadecvate”</string>
-    <string name="privacyProtectionToggle">Protecția confidențialității</string>
 
     <string name="networkTrackerSummaryHeader">CEI MAI MARI INFRACTORI PRIVIND REȚELELE DE COOKIE-URI DE URMĂRIRE</string>
     <string name="networkTrackerSummaryNotReady">Continuă să colectăm date pentru a arăta câte cookie-uri de urmărire am blocat.</string>
@@ -402,4 +402,55 @@
     <string name="daxNonSerpCtaText">În timp ce atingi și derulezi, voi bloca urmăritorii pisălogi. &lt;br/&gt;&lt;br/&gt;Dă-i bătaie- continuă să navighezi!</string>
     <string name="daxMainNetworkOwnedCtaText">Atenție! %s este deținut de %s.&lt;br/&gt;&lt;br/&gt; Urmăritorii %s spionează %s site-urile web de top, &#128561; dar nu îți face griji! &lt;br/&gt;&lt;br/&gt;Îi voi bloca %s să nu vadă activitatea ta pe acele site-uri.</string>
     <string name="daxMainNetworkCtaText">Atenție! %s este o rețea semnificativă de urmărire.&lt;br/&gt;&lt;br/&gt; Urmăritorii lor spionează %s site-uri de top, &#128561; dar nu îți face griji! &lt;br/&gt;&lt;br/&gt;Îi voi bloca %s să nu vadă activitatea ta pe acele site-uri.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Continuați</string>
+    <string name="downloadConfirmationSaveFileTitle">Salvați %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Păstrați ambele</string>
+    <string name="downloadConfirmationReplaceOldFileText">Înlocuiți</string>
+    <string name="downloadConfirmationOpenFileText">Deschideți</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Fișierul nu poate fi deschis</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Nu s-a putut șterge fișierul vechi</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Pictograma Aplicației</string>
+    <string name="changeIconCtaLabel">Schimbați Pictograma Aplicației</string>
+    <string name="changeIconCtaAccept">Aplicați</string>
+    <string name="changeIconCtaCancel">Anulați</string>
+    <string name="changeIconDialogTitle">Aplicați Noua Pictogramă?</string>
+    <string name="changeIconDialogMessage">Aplicația se poate închide pentru aplicarea modificărilor. Reveniți după ce ați admirat noua dvs. splendidă pictogramă.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Gestionați lista albă</string>
+    <string name="reportBrokenSite">Raportați Site-ul Distrus</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Adăugați</string>
+    <string name="dialogEditTitle">Editați</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Lista albă</string>
+    <string name="whitelistAdd">Adăugați la lista albă</string>
+    <string name="whitelistRemove">Înlocuiți din lista albă</string>
+    <string name="whitelistEntryOverflowContentDescription">Mai multe opțiuni pentru intrarea în lista albă %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Sigur doriți să ștergeți &lt;b&gt;%s&lt;/b&gt; din lista albă?</string>
+    <string name="whitelistExplanation">Aceste site-uri listate în alb nu vor fi actualizate de Protecția confidențialității</string>
+    <string name="whitelistNoEntries">Nu există încă site-uri listate cu lista albă</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Nu s-a putut salva, introduceți un domeniu precum <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Lista de protecție a confidențialității</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Site-uri ignifuge</string>
+    <string name="settingsFireproofWebsites">Site-uri ignifuge</string>
+    <string name="fireproofWebsiteMenuTitle">Website ignifug</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; este acum ignifugat! Accesați Setări pentru a afla mai multe.</string>
+    <string name="fireproofWebsiteSnackbarAction">Anulați</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Sigur doriți să ștergeți &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Niciun site web nu a fost ignorat încă</string>
+    <string name="fireproofWebsiteFeatureDescription">Site-urile web se bazează pe cookie-uri pentru a vă menține conectat. Când ignorați un site, cookie-urile nu vor fi șterse și veți rămâne conectat, chiar și după utilizarea butonului Fire.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Mai multe opțiuni pentru site-ul ignifug %s</string>
 </resources>
