--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -89,9 +89,10 @@
     <string name="closeTab">Закрыть вкладка</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Защита конфиденциальности сайта</string>
+    <string name="privacyProtectionEnabled">ЗАЩИТА САЙТА ВКЛЮЧЕНА</string>
+    <string name="privacyProtectionDisabled">ЗАЩИТА САЙТА ОТКЛЮЧЕНА</string>
     <string name="privacyDashboardActivityTitle">Панель конфиденциальности</string>
-    <string name="privacyProtectionEnabled">РЕЖИМ КОНФИДЕНЦИАЛЬНОСТИ ВКЛЮЧЁН</string>
-    <string name="privacyProtectionDisabled">РЕЖИМ КОНФИДЕНЦИАЛЬНОСТИ ВЫКЛЮЧЕН</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">УРОВЕНЬ КОНФИДЕНЦИАЛЬНОСТИ ПОВЫШЕН С &lt;img src="%d" /&gt; ДО &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Рейтинг конфиденциальности</string>
 
@@ -145,7 +146,6 @@
     <string name="practicesTosdrLink">Данные об уровне защиты конфиденциальности предоставлены <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Значок высокого уровня защиты конфиденциальности</string>
     <string name="practicesIconContentBad">Значок низкого уровня защиты конфиденциальности</string>
-    <string name="privacyProtectionToggle">Защита конфиденциальности</string>
 
     <string name="networkTrackerSummaryHeader">ОСНОВНЫЕ ТРЕКЕРНЫЕ СЕТИ, ПРЕДСТАВЛЯЮЩИЕ УГРОЗУ КОНФИДЕНЦИАЛЬНОСТИ</string>
     <string name="networkTrackerSummaryNotReady">Мы продолжаем собирать данные, чтобы показать, сколько трекеров мы заблокировали.</string>
@@ -423,4 +423,55 @@
     <string name="daxNonSerpCtaText">Когда вы нажмете здесь и прокрутите, я заблокирую надоедливые трекеры. &lt;br/&gt;&lt;br/&gt;Не останавливайтесь - продолжайте просмотр!</string>
     <string name="daxMainNetworkOwnedCtaText">Внимание! %s принадлежит %s.Трекеры &lt;br/&gt;&lt;br/&gt; %s скрываются примерно на %s топ-сайтов &#128561;. Но не волнуйтесь! &lt;br/&gt;&lt;br/&gt;Я не позволю %s видеть ваши действия на этих сайтах.</string>
     <string name="daxMainNetworkCtaText">Внимание! %s является основной сетью отслеживания.&lt;br/&gt;&lt;br/&gt; Их трекеры скрываются примерно на %s топовых сайтах &#128561;. Но не волнуйтесь! &lt;br/&gt;&lt;br/&gt;Я не позволю %s видеть вашу активность на этих сайтах.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Продолжить</string>
+    <string name="downloadConfirmationSaveFileTitle">Сохранить %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Оставить оба</string>
+    <string name="downloadConfirmationReplaceOldFileText">Заменить</string>
+    <string name="downloadConfirmationOpenFileText">Открыть</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Не удается открыть файл</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Не удается удалить старый файл</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Значок приложения</string>
+    <string name="changeIconCtaLabel">Изменить значок приложения</string>
+    <string name="changeIconCtaAccept">Применить</string>
+    <string name="changeIconCtaCancel">Отменить</string>
+    <string name="changeIconDialogTitle">Применить новый значок?</string>
+    <string name="changeIconDialogMessage">Приложение может закрыться, чтобы применить изменения. Возвращайтесь после того, как налюбуетесь своим новым привлекательным значком.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Управление белым списком</string>
+    <string name="reportBrokenSite">Сообщить о неработающем сайте</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Добавить</string>
+    <string name="dialogEditTitle">Редактировать</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Белый список</string>
+    <string name="whitelistAdd">Добавить в белый список</string>
+    <string name="whitelistRemove">Удалить из белого списка</string>
+    <string name="whitelistEntryOverflowContentDescription">Дополнительные параметры для внесения записей в белый список %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Вы уверены, что хотите удалить &lt;b&gt;%s&lt;/b&gt; из белого списка?</string>
+    <string name="whitelistExplanation">Эти сайты из белого списка не будут обновлены с помощью защиты конфиденциальности</string>
+    <string name="whitelistNoEntries">В белом списке пока нет сайтов</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Не удалось сохранить, введите домен, например, <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Белый список защиты конфиденциальности</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Обезопасить сайты</string>
+    <string name="settingsFireproofWebsites">Обезопасить сайты</string>
+    <string name="fireproofWebsiteMenuTitle">Обезопасить сайт</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; теперь безопасен! Зайдите в Настройки, чтобы узнать больше.</string>
+    <string name="fireproofWebsiteSnackbarAction">Отменить действие</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Вы уверены, что хотите удалить &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Ни один сайт пока не защищен</string>
+    <string name="fireproofWebsiteFeatureDescription">Сайты используют cookie-файлы, чтобы вы были авторизованы. Когда вы защищаете сайт, файлы cookie не будут удалены, и вы останетесь авторизованы даже после использования кнопки \"Пожар\".</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Дополнительные параметры для безопасного сайта %s</string>
 </resources>
