--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Zatvoriť karta</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Ochrana súkromia stránky</string>
+    <string name="privacyProtectionEnabled">OCHRANA STRÁNKY ZAPNUTÁ</string>
+    <string name="privacyProtectionDisabled">OCHRANA STRÁNKY ZAKÁZANÁ</string>
     <string name="privacyDashboardActivityTitle">Ovládací panel ochrany súkromia</string>
-    <string name="privacyProtectionEnabled">OCHRANA SÚKROMIA ZAPNUTÁ</string>
-    <string name="privacyProtectionDisabled">OCHRANA SÚKROMIA VYPNUTÁ</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">ZDOKONALENÉ Z &lt;img src="%d" /&gt; NA &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Stupeň ochrany súkromia</string>
 
@@ -125,7 +126,6 @@
     <string name="practicesTosdrLink">Spôsoby ochrany súkromia sú výsledkom <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikona osvedčených postupov</string>
     <string name="practicesIconContentBad">Ikona nedostatočných postupov</string>
-    <string name="privacyProtectionToggle">Ochrana súkromia</string>
 
     <string name="networkTrackerSummaryHeader">SLEDOVACIE SIETE S NAJVÄČŠÍMI PRIESTUPKAMI</string>
     <string name="networkTrackerSummaryNotReady">Naďalej zhromažďujeme údaje s cieľom zistiť, koľko sledovacích zariadení sme zablokovali.</string>
@@ -402,4 +402,55 @@
     <string name="daxNonSerpCtaText">Počas toho, ako budeš ťukať a posúvať, zablokujem nepríjemné sledovacie zariadenia. &lt;br/&gt;&lt;br/&gt;Neprestávaj - pokračuj v prehľadávaní!</string>
     <string name="daxMainNetworkOwnedCtaText">Hlavu hore! Vlastníkom %s je %s.Sledovatelia &lt;br/&gt;&lt;br/&gt; %s číhajú na %s najobľúbenejších weboch &#128561;, ale nemaj strach! &lt;br/&gt;&lt;br/&gt;Zablokujem %s, aby niekto pozoroval tvoje aktivity na týchto stránkach.</string>
     <string name="daxMainNetworkCtaText">Hlavu hore! %s je hlavná sledovacia sieť.&lt;br/&gt;&lt;br/&gt; Ich sledovatelia číhajú na %s najobľúbenejších weboch &#128561;, ale nemaj strach! &lt;br/&gt;&lt;br/&gt;Zablokujem %s, aby niekto pozoroval tvoje aktivity na týchto stránkach.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Ďalej</string>
+    <string name="downloadConfirmationSaveFileTitle">Ušetrite %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Nechať si oboje</string>
+    <string name="downloadConfirmationReplaceOldFileText">Vymeniť</string>
+    <string name="downloadConfirmationOpenFileText">Otvorené</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Súbor sa nepodarilo otvoriť</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Starý súbor sa nepodarilo odstrániť</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Ikona aplikácie</string>
+    <string name="changeIconCtaLabel">Zmeniť ikonu aplikácie</string>
+    <string name="changeIconCtaAccept">Použiť</string>
+    <string name="changeIconCtaCancel">Zrušiť</string>
+    <string name="changeIconDialogTitle">Použiť novú ikonu?</string>
+    <string name="changeIconDialogMessage">Pri použití zmien sa aplikácia môže zavrieť. Po nadšení zo svojej novej peknej ikony sa vráťte späť.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Spravovať bielu listinu</string>
+    <string name="reportBrokenSite">Nahlásiť nefunkčnú stránku</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Pridať</string>
+    <string name="dialogEditTitle">Editovať</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Biela listina</string>
+    <string name="whitelistAdd">Pridať na bielu listinu</string>
+    <string name="whitelistRemove">Odstrániť z bielej listiny</string>
+    <string name="whitelistEntryOverflowContentDescription">Ďalšie možnosti pre vstup na bielu listinu %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Naozaj chcete odstrániť &lt;b&gt;%s&lt;/b&gt; zo zoznamu povolených?</string>
+    <string name="whitelistExplanation">Tieto weby na zozname povolených položiek nebudú inovované pomocou ochrany osobných údajov</string>
+    <string name="whitelistNoEntries">Zatiaľ nie sú na zozname povolených stránok</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Nepodarilo sa uložiť, zadajte doménu ako <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Zoznam dôveryhodných osôb na ochranu súkromia</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Zabezpečené webové stránky</string>
+    <string name="settingsFireproofWebsites">Zabezpečené webové stránky</string>
+    <string name="fireproofWebsiteMenuTitle">Zabezpečiť webovú stránku</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; je teraz zabezpečená! Viac informácií nájdete na stránke Nastavenia.</string>
+    <string name="fireproofWebsiteSnackbarAction">Vrátenie späť</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Naozaj chcete odstrániť &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Zatiaľ nie sú k dispozícii žiadne webové stránky</string>
+    <string name="fireproofWebsiteFeatureDescription">Webové stránky sa spoliehajú na súbory cookie, aby vás mohli prihlásiť. Keď na zabezpečíte web, cookies sa nevymažú a vy budete prihlásení, a to aj po použití tlačidla Fire.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Ďalšie možnosti pre zabezpečenú webovú stránku %s</string>
 </resources>
