--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -73,9 +73,10 @@
     <string name="closeTab">Zapri zavihek</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Zaščita zasebnosti na strani</string>
+    <string name="privacyProtectionEnabled">OMOGOČI ZAŠČITO NA STRANI</string>
+    <string name="privacyProtectionDisabled">ONEMOGOČI ZAŠČITO NA STRANI</string>
     <string name="privacyDashboardActivityTitle">Nadzorna plošča zasebnosti</string>
-    <string name="privacyProtectionEnabled">ZAŠČITA ZASEBNOSTI OMOGOČENA</string>
-    <string name="privacyProtectionDisabled">ZAŠČITA ZASEBNOSTI ONEMOGOČENA</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">IZBOLJŠANO OD &lt;img src="%d" /&gt; DO &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Ocena zasebnosti</string>
 
@@ -129,7 +130,6 @@
     <string name="practicesTosdrLink">Rezultati prakse zasebnosti od <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikona dobre prakse</string>
     <string name="practicesIconContentBad">Ikona slabe prakse</string>
-    <string name="privacyProtectionToggle">Zaščita zasebnosti</string>
 
     <string name="networkTrackerSummaryHeader">GLAVNI KRŠITELJI MED SLEDILNIMI OMREŽJI</string>
     <string name="networkTrackerSummaryNotReady">Še vedno zbiramo podatke za prikaz, koliko sledilnikov smo blokirali.</string>
@@ -408,4 +408,55 @@
     <string name="daxNonSerpCtaText">Ko tapkate in se pomikate, bom blokiral nadležne sledilce. &lt;br/&gt;&lt;br/&gt;Brskaj naprej!</string>
     <string name="daxMainNetworkOwnedCtaText">Glavo pokonci! %s je last %s.&lt;br/&gt;&lt;br/&gt; %s sledilci se skrivajo na približno %s najboljših spletnih mest &#128561;, vendar ne skrbite!&lt;br/&gt;&lt;br/&gt; %s bom preprečil ogled vaše dejavnosti na teh spletnih mestih.</string>
     <string name="daxMainNetworkCtaText">Glavo pokonci! %s je glavno omrežje za sledenje.&lt;br/&gt;&lt;br/&gt; Njihovi sledilci se skrivajo na približno %s najboljših spletnih mest, vendar ne skrbite!&lt;br/&gt;&lt;br/&gt; %s bom preprečil ogled vaše dejavnosti na teh spletnih mestih.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Nadaljuj</string>
+    <string name="downloadConfirmationSaveFileTitle">Shrani %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Ohrani oba</string>
+    <string name="downloadConfirmationReplaceOldFileText">Zamenjaj</string>
+    <string name="downloadConfirmationOpenFileText">Odpri</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Datoteke ni mogoče odpreti</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Stare datoteke ni mogoče izbrisati</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">Ikona aplikacije</string>
+    <string name="changeIconCtaLabel">Spremeni ikono aplikacije</string>
+    <string name="changeIconCtaAccept">Uporabi</string>
+    <string name="changeIconCtaCancel">Preklic</string>
+    <string name="changeIconDialogTitle">Uporabi novo ikono?</string>
+    <string name="changeIconDialogMessage">Aplikacija se bo mogoče zaprla, da izvede spremembe. Vrnite se na aplikacijo potem, ko se vam prikaže vaša privlačna nova ikona.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Uredi beli seznam</string>
+    <string name="reportBrokenSite">Prijavi nedelujočo stran</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Dodaj</string>
+    <string name="dialogEditTitle">Uredi</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Beli seznam</string>
+    <string name="whitelistAdd">Dodaj na beli seznam</string>
+    <string name="whitelistRemove">Odstrani z belega seznama</string>
+    <string name="whitelistEntryOverflowContentDescription">Več možnosti za vnašanje na beli seznam %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Ste prepričani, da želite ta naslov izbrisati &lt;b&gt;%s&lt;/b&gt; z belega seznama?</string>
+    <string name="whitelistExplanation">Naslednje strani na belem seznamu ne bodo nadgrajene z zaščito zasebnosti.</string>
+    <string name="whitelistNoEntries">Na belem seznamu še ni nobene strani</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Shranjevanje ni bilo mogoče, vnesite domeno, kot na primer <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Beli seznam za zaščito zasebnosti</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Spletne stran s požarno zaščito</string>
+    <string name="settingsFireproofWebsites">Spletna stran s požarno zaščito</string>
+    <string name="fireproofWebsiteMenuTitle">Spletna stran s požarno zaščito</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; ima sedaj požarno zaščito! Za več informacij obiščite Nastavitve.</string>
+    <string name="fireproofWebsiteSnackbarAction">Prekliči spremembe</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Ste prepričani, da želite izbrisati &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Nobena spletna stran še nima požarne zaščite</string>
+    <string name="fireproofWebsiteFeatureDescription">Za lažji vpis spletne strani uporabljajo piškotke. Ko stran požarno zaščitite, piškotki ne bodo izbrisani in vaš vpis se bo ohranil tudi po tem, ko uporabite gumb za požarno zaščito.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Več možnosti za stran s požarno zaščito %s</string>
 </resources>
