--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -89,9 +89,10 @@
     <string name="closeTab">Stäng flik</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Webbplatsens integritetsskydd</string>
+    <string name="privacyProtectionEnabled">WEBBPLATSSKYDD AKTIVERAT</string>
+    <string name="privacyProtectionDisabled">WEBBPLATSSKYDD INAKTIVERAT</string>
     <string name="privacyDashboardActivityTitle">Sekretesspanel</string>
-    <string name="privacyProtectionEnabled">INTEGRITETSSKYDD AKTIVERAT</string>
-    <string name="privacyProtectionDisabled">INTEGRITETSSKYDD INAKTIVERAT</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">FÖRBÄTTRAD FRÅN &lt;img src="%d" /&gt; TILL &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Sekretessklass</string>
 
@@ -137,7 +138,6 @@
     <string name="practicesTosdrLink">Sekretesspraxisresultat från <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Ikon för god praxis</string>
     <string name="practicesIconContentBad">Ikon för dålig praxis</string>
-    <string name="privacyProtectionToggle">Integritetsskydd</string>
 
     <string name="networkTrackerSummaryHeader">SPÅRARNÄTVERKETS FRÄMSTA BROTTSLINGAR</string>
     <string name="networkTrackerSummaryNotReady">Vi samlar fortfarande in data för att visa hur många spårare vi har blockerat.</string>
@@ -412,4 +412,55 @@
     <string name="daxNonSerpCtaText">Medan du pekar och bläddrar kommer jag att blockera irriterande spårare. &lt;br/&gt;&lt;br/&gt;Fortsätt - surfa vidare!</string>
     <string name="daxMainNetworkOwnedCtaText">Se upp! %s ägs av %s.&lt;br/&gt;&lt;br/&gt; %ss spårare ligger och lurar på cirka %s av de populäraste webbplatserna &#128561; men oroa dig inte! &lt;br/&gt;&lt;br/&gt;Jag kommer att hindra %s från att se din aktivitet på dessa webbplatser.</string>
     <string name="daxMainNetworkCtaText">Se upp! %s är ett stort spårningsnätverk.&lt;br/&gt;&lt;br/&gt; Deras spårare ligger och lurar på cirka %s av de populäraste webbplatserna &#128561; men oroa dig inte! &lt;br/&gt;&lt;br/&gt;Jag kommer att hindra %s från att se din aktivitet på dessa webbplatser.</string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Fortsätt</string>
+    <string name="downloadConfirmationSaveFileTitle">Spara %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Behåll båda</string>
+    <string name="downloadConfirmationReplaceOldFileText">Byt ut</string>
+    <string name="downloadConfirmationOpenFileText">Öppna</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Kunde inte öppna filen</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Det gick inte att ta bort den gamla filen</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">App-ikon</string>
+    <string name="changeIconCtaLabel">Byt app-ikon</string>
+    <string name="changeIconCtaAccept">Tillämpa</string>
+    <string name="changeIconCtaCancel">Avbryt</string>
+    <string name="changeIconDialogTitle">Tillämpa ny ikon?</string>
+    <string name="changeIconDialogMessage">Appen kanske måste stängas för att tillämpa ändringar. Kom tillbaka när du har tillämpat din nya ikon.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Hantera vitlista</string>
+    <string name="reportBrokenSite">Rapportera bruten webbplats</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Lägg till</string>
+    <string name="dialogEditTitle">Redigera</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Vitlista</string>
+    <string name="whitelistAdd">Lägg till i vitlista</string>
+    <string name="whitelistRemove">Ta bort från vitlista</string>
+    <string name="whitelistEntryOverflowContentDescription">Fler alternativ för inmatning av vitlista %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Är du säker på att du vill ta bort &lt;b&gt;%s&lt;/b&gt; från vitlistan?</string>
+    <string name="whitelistExplanation">Dessa vitlistade webbplatser kommer inte att uppgraderas av Integritetsskydd</string>
+    <string name="whitelistNoEntries">Inga vitlistade webbplatser än</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Det gick inte att spara, ange en domän som <b>example.com</b>
+  </string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Vitlista för integritetsskydd</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Brandsäkra webbplatser</string>
+    <string name="settingsFireproofWebsites">Brandsäkra webbplatser</string>
+    <string name="fireproofWebsiteMenuTitle">Brandsäker webbplats</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b&gt;%s&lt;/b&gt; är nu brandsäker! Besök Inställningar för att lära dig mer.</string>
+    <string name="fireproofWebsiteSnackbarAction">Återställ</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Är du säker på att du vill ta bort &lt;b&gt;%s&lt;/b&gt;?</string>
+    <string name="fireproofWebsiteEmptyListHint">Inga webbplatser är brandsäkra än</string>
+    <string name="fireproofWebsiteFeatureDescription">Webbplatser litar på cookies för att hålla dig inloggad. När du skyddar en webbplats kommer cookies inte att raderas och du kommer att förbli inloggad, även efter att du använder brandknappen.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">Fler alternativ för brandsäker webbplats %s</string>
 </resources>
