--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,9 @@
     <string name="closeTab">Close tab</string>
 
     <!-- Privacy Dashboard Activities -->
+    <string name="privacyProtectionToggle">Site Privacy Protection</string>
+    <string name="privacyProtectionEnabled">SITE PROTECTION ENABLED</string>
+    <string name="privacyProtectionDisabled">SITE PROTECTION DISABLED</string>
     <string name="privacyDashboardActivityTitle">Privacy Dashboard</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">ENHANCED FROM &lt;img src="%d" /> TO &lt;img src="%d" /></string>
     <string name="privacyGradeContentDescription">Privacy Grade</string>
@@ -404,4 +407,54 @@
     <string name="daxNonSerpCtaText"><![CDATA[As you tap and scroll, I\'ll block pesky trackers. <br/><br/>Go ahead — keep browsing!]]></string>
     <string name="daxMainNetworkOwnedCtaText"><![CDATA[Heads up! %s is owned by %s.<br/><br/> %s\'s trackers lurk on about %s of top websites 😱 but don\'t worry!<br/><br/>I\'ll block %s from seeing your activity on those sites.]]></string>
     <string name="daxMainNetworkCtaText"><![CDATA[Heads up! %s is a major tracking network.<br/><br/> Their trackers lurk on about %s of top sites 😱 but don\'t worry!<br/><br/>I\'ll block %s from seeing your activity on those sites.]]></string>
+
+    <!-- Download Confirmation -->
+    <string name="downloadConfirmationContinue">Continue</string>
+    <string name="downloadConfirmationSaveFileTitle">Save %1$s</string>
+    <string name="downloadConfirmationKeepBothFilesText">Keep both</string>
+    <string name="downloadConfirmationReplaceOldFileText">Replace</string>
+    <string name="downloadConfirmationOpenFileText">Open</string>
+    <string name="downloadConfirmationUnableToOpenFileText">Could not open file</string>
+    <string name="downloadConfirmationUnableToDeleteFileText">Could not delete old file</string>
+
+    <!-- Change Icon Activity -->
+    <string name="changeIconActivityTitle">App Icon</string>
+    <string name="changeIconCtaLabel">Change App Icon</string>
+    <string name="changeIconCtaAccept">Apply</string>
+    <string name="changeIconCtaCancel">Cancel</string>
+    <string name="changeIconDialogTitle">Apply New Icon?</string>
+    <string name="changeIconDialogMessage">The app may close to apply changes. Come on back after you\'ve admired your handsome new icon.</string>
+
+    <!-- New dashboard / menu buttons -->
+    <string name="manageWhitelist">Manage Whitelist</string>
+    <string name="reportBrokenSite">Report Broken Site</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Add</string>
+    <string name="dialogEditTitle">Edit</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Whitelist</string>
+    <string name="whitelistAdd">Add to Whitelist</string>
+    <string name="whitelistRemove">Remove from Whitelist</string>
+    <string name="whitelistEntryOverflowContentDescription">More options for whitelist entry %s</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Are you sure you want to delete &lt;b>%s&lt;/b> from whitelist?</string>
+    <string name="whitelistExplanation">These whitelisted sites will not be upgraded by Privacy Protection</string>
+    <string name="whitelistNoEntries">No whitelisted sites yet</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Could not save, enter a domain like <b>example.com</b></string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Privacy Protection Whitelist</string>
+
+    <!-- Fireproof websites -->
+    <string name="fireproofWebsitesActivityTitle">Fireproof Websites</string>
+    <string name="settingsFireproofWebsites">Fireproof Websites</string>
+    <string name="fireproofWebsiteMenuTitle">Fireproof Website</string>
+    <string name="fireproofWebsiteSnackbarConfirmation">&lt;b>%s&lt;/b> is now fireproof! Visit Settings to learn more.</string>
+    <string name="fireproofWebsiteSnackbarAction">Undo</string>
+    <string name="fireproofWebsiteDeleteConfirmMessage">Are you sure you want to delete &lt;b>%s&lt;/b>?</string>
+    <string name="fireproofWebsiteEmptyListHint">No websites fireproofed yet</string>
+    <string name="fireproofWebsiteFeatureDescription">Websites rely on cookies to keep you signed in. When you Fireproof a site, cookies won\'t be erased and you\'ll stay signed in, even after using the Fire Button.</string>
+    <string name="fireproofWebsiteOverflowContentDescription">More options for fireproof website %s</string>
 </resources>
